themes/Default/less/large.less
/* VARIABLESS/MIXINS
================================================== */

@wrapperPercent: 80%;
@wrapperWidth: @wrapperPercent/100;
@import "vars.less";


/* GLOBAL
================================================== */

.wrapper {
	width: @wrapperPercent;
	max-width: 900px;
	margin: 0 auto;
}


/* Header
================================================== */

#masthead hgroup {
	background-color: @mastheadBg;
}

#masthead hgroup, 
.page-nav li a,
.page-nav ul {
	border: 0 solid rgba(0,0,0,0.15);
}

#masthead hgroup {
	padding: 2em 0;
	border-bottom-width: 1px;
	box-shadow: 10px 0 15px rgba(0,0,0,0.1);
}

.page-nav {
	a,
	li ul ul::before {
		line-height: 2;
	}
	
	a {
		text-decoration: none;
		color: @linkColor;
	}
	
	> ul > li:hover > a,
	> ul > li:focus > a,
	> ul > li.current > a {
		background-color: @mainBg;
		.gradient(@mainBg, 0%, white, 100%);
	}

	> ul > li.parent:hover > a,
	li ul {
		background-color: white;
		.gradient(white);
	}
	
	//parent pages
	> ul {
		> li {
			position: relative;
			float: left;
			
			&:first-child > a {
				border-left-width: 1px;
			}
			
			> a {
				line-height: 2.4;
				display: inline-block;
				padding: 0 1em;
				border-right-width: 1px;
			}
			
			&:hover > a,
			&:focus > a {
				position: relative;
				z-index: 3;
			}
			
			&:hover > a,
			&:focus > a,
			&.current > a {
				box-shadow: 10px -2px 10px -2px rgba(0,0,0,0.03), 
									 -10px -2px 10px -2px rgba(0,0,0,0.03);
			}
		}
	}

	//child pages in dropdowns
	li {		
		li {
			position: relative; //context for nested UL positioning
			white-space: nowrap;
			text-shadow: 1px 1px 0 rgba(255,255,255,1);
			
			&:hover {
				background-color: fadeout(@linkColor, 95);
			}
			
			a {
				display: block;
				position: relative; //enable z-index
				z-index: 1; //display above nest arrow
				padding: 0 2em 0 1em; //leave space for nest indicator
			}
			
				//nest indicator
			&.parent > a::after {
				position: absolute;
				right: 0.5em;
				content: "\25B8";
				color: rgba(0,0,0,0.3);
			}
		}
		
		ul {
			display: none;
			position: absolute;
			z-index: 2;
			margin: -1px 0 0 -1px;
			border-width: 1px;
			box-shadow: 1px 1px 3px rgba(0,0,0,0.2);
			
			ul {
				top: 0;
				left: 100%;
			}
		}
		
		&:hover > ul {
			display: block;
		}
	}

	//incase window resized from small to large
	select {
		margin-top: 1.5em;
	}
}


/* BLOG POSTS
================================================== */

@sidebarWidth: @wrapperWidth*32%;

article {
	position: relative;
	padding-left: @sidebarWidth+3%;
	
	footer {
		width: @sidebarWidth;
		position: absolute;
		top: 0;
		left: 0;

		.previous h3::before {
			content: "\2190\00A0";
		}

		.next h3::after {
			content: "\00A0\2192";
		}

		.next,
		.previous {
			margin-top: 2em;

			> * {
				margin: 0;
			}
		}
		
		.pubdate {
			line-height: 2.1;
		}
		
		.tags {		
			ul {
				margin: 0;
				padding: 0;
				list-style: none;
			}
			
			li {
				color: fadeout(@textColor, 70);
			
				&::before {
					position: relative;
					top: 0.1em;
					content: "#";
					margin-right: 0.2em;
				}
			}
		}
	}

	.pubdate h3,
	.tags h3 {
		display: none;
	}
}


/* POST ARCHIVES
================================================== */

.year-block,
.month-block,
.month-block article {
	border: 0 solid rgba(0,0,0,0.2);
}

.year-block,
.month-block {
	border-top-width: 1px;
}

.year-block .month-block {
	border-left-width: 1px;

	&:first-of-type {
		border-top: none;
	}
}

.year-block > h2,
.month-block > h3 {
	position: absolute;
	font-size: 1.1em;
	margin: 1em 0 0;
}

.day-block article {
	padding-left: 0;
}

.year-block > h2 {
	width: 10%;
}

.month-block {
	padding-bottom: 1.2em;

	> h3 {
		width: 15%;
	}

	article {
		margin-left: 19%;
		padding-left: 2%;
	}
}

.year-block .month-block {
		margin-left: 11%;
		padding-left: 2%;

	article {
		margin-left: 22%;
	}
}

#drafts-all article {
	padding-left: 0;
}

#drafts-all,
#posts-all,
#posts-by-date {
	article {
		footer {
			width: auto;
			position: static;

			.pubdate {
				line-height: 1.4;				
			}

			.tags {
				li {
					display: inline;
					color: @textColor;
					
					&::before {
						content: "";
					}

					&::after {
						content: ",";
					}
					
					&:last-child::after {
						content: none;
					}
				}
			}
		}
	}
}

